Fixing the weird button issue on iOS

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -25,11 +25,14 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 // Styling
 =button($color)
+  display: inline-block
   font-size: 50px
   margin: 20px
   border: none
   width: 50px
+  max-width: 50px
   height: 50px
+  max-height: 50px
   position: relative
   background-color: lighten($color, 2%)
   border-radius: 50%
